    ==screen-reader usability project == add role=region to widgets and change headings to h4 (2.1.7.0)
    ==breadcrumb project== breadcrumb not need aria-label (2.1.7.1)
    ==css optimize project== remove !important from link rules (2.1.7.1)
    !reverse: scripts to footer (2.1.6.3) is removed, should be used in child-theme (2.1.7.3)
    -new primary navigation menu (commit #16.2.1)
    -functions.php function's name was wrong: not included 'manduca' (commit # 16.2.2)
    -translation added (navigation menu)
    - single entry-header positioning correctly (commit#16.2.3)
    -header.txt - clearfix unnecessary (commit#16.2.4)
    -css: styling searchform more flexible (commit # 16.2.5)
    -header image: not link to homepage, since it is only in homepage, small styling +custom header width change (commit# 16.2.6)
    -header apply filters for site title (commit # 16.2.7)
    
16.4
    commit #16.4.1
        ==image optimazation == new image size  This commit was accidentaly included in ver 16.3
        -new translation file (po+mo). 
    Commit# 16.4.2
        ==reposnsiblity enhancezent== increase pagination nav to 44px and more perceivable.
        - html arrows replaced with FontAwesome + pre and code design change 
    commit# 16.4.3
        - search.php: pagenav was duplicated &
        ==speed boost project ==add async to eliminat js block rendering
    commit# 16.4.4
        dd: March 22, 2016
        ==speed boost project==
            - insert improve enqueued assets urls plugin to theme
            - enqueue min.css file
            - separate media=print css file and minimize
            - add async attribute to loaded scripts
    commit# 16.4.5
        dd March 22, 2016
        -breadcrumb navigation aria-label was deleted accidentaly. Correction now.
        - banner landmark was duplicate screen reader announced twice (Oaron)
            
    
    



    